--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             background: linear-gradient(45deg, #4CAF50, #45a049);
             color: white;
             padding: 30px 20px;
-            text-align: center;
+            text-align: left;
             position: relative;
         }
 
